--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+  "root": true,
   "parser": "babel-eslint",
   "env": {
     "browser": true,
@@ -9,17 +10,16 @@
     "ecmaVersion": 6,
     "sourceType": "module"
   },
-  "extends": "airbnb",
+  "extends": ["airbnb", "eslint:recommended"],
   "rules": {
-    "semi": [0],
+    "semi": ["error", "always"],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
     "jsx-a11y/anchor-is-valid": [0],
     "react/require-default-props": [0],
     "arrow-body-style": [0],
     "no-param-reassign": [0],
-    "react/prop-types": [0]
+    "react/prop-types": [0],
+    "import/no-unresolved": "off"
   },
-  "plugins": [
-    "nns"
-  ]
+  "plugins": ["import"]
 }
