--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
+    "eslint-config-prettier": "^6.3.0",
     "eslint-config-standard": "^13.0.1",
     "eslint-loader": "^2.2.1",
     "eslint-plugin-import": "^2.18.2",
