change server.js to koa

--- a/package.json
+++ b/package.json
@@ -19,7 +19,13 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-plugin-nns": "^0.0.2",
     "koa": "^2.7.0",
+    "koa-bodyparser": "^4.2.1",
+    "koa-logger": "^3.2.1",
+    "koa-router": "^7.4.0",
+    "koa-session": "^5.12.3",
     "less": "^3.9.0",
+    "lodash": "^4.17.15",
+    "mongoose": "^5.7.1",
     "next": "^9.0.2",
     "next-redux-wrapper": "^3.0.0",
     "react": "^16.8.6",
