--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/react": "^16.8.23",
     "@types/react-dom": "^16.8.4",
     "babel-eslint": "^10.0.2",
+    "babel-plugin-import": "^1.12.2",
     "cross-env": "^5.2.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^17.1.1",
