add mongodb connect

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,11 +15,15 @@
     "semi": ["error", "always"],
     "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx", ".tsx"] }],
     "jsx-a11y/anchor-is-valid": [0],
+    "jsx-a11y/click-events-have-key-events": [0],
+    "jsx-a11y/no-noninteractive-element-interactions": [0],
     "react/require-default-props": [0],
     "arrow-body-style": [0],
     "no-param-reassign": [0],
     "react/prop-types": [0],
-    "import/no-unresolved": "off"
+    "import/no-unresolved": "off",
+    "import/prefer-default-export": "off",
+    "comma-dangle": ["error", "never"]
   },
   "plugins": ["import"]
 }
