--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "license": "ISC",
   "dependencies": {
     "@zeit/next-bundle-analyzer": "^0.1.2",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-plugin-nns": "^0.0.2",
+    "for-editor": "^0.3.4",
+    "highlight.js": "^9.15.10",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
     "koa-logger": "^3.2.1",
@@ -25,15 +28,19 @@
     "koa-session": "^5.12.3",
     "less": "^3.9.0",
     "lodash": "^4.17.15",
+    "marked": "^0.7.0",
     "mongoose": "^5.7.1",
     "next": "^9.0.2",
     "next-redux-wrapper": "^3.0.0",
+    "pako": "^1.0.10",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-markdown": "^4.2.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "zlib": "^1.0.5"
   },
   "devDependencies": {
     "@types/less": "^3.0.0",
@@ -55,6 +62,7 @@
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.0",
     "nodemon": "^1.19.1",
+    "style-loader": "^1.0.0",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3"
   }
