--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "eslint-plugin-nns": "^0.0.2",
     "for-editor": "^0.3.4",
+    "github-markdown-css": "^3.0.1",
     "highlight.js": "^9.15.10",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
@@ -33,6 +34,7 @@
     "next": "^9.0.2",
     "next-redux-wrapper": "^3.0.0",
     "pako": "^1.0.10",
+    "path-match": "^1.2.4",
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
