--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-editor-markdown": "^1.0.6",
     "react-markdown": "^4.2.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
