--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-editor-markdown": "^1.0.6",
+    "react-infinite-scroller": "^1.2.4",
     "react-markdown": "^4.2.2",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
