--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "bcrypt-nodejs": "^0.0.3",
     "eslint-plugin-nns": "^0.0.2",
     "for-editor": "^0.3.4",
     "github-markdown-css": "^3.0.1",
     "highlight.js": "^9.15.10",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
     "koa-bodyparser": "^4.2.1",
+    "koa-jwt": "^3.6.0",
     "koa-logger": "^3.2.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.3",
