change markdown editor

--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "babel-plugin-module-resolver": "^3.2.0",
     "bcrypt-nodejs": "^0.0.3",
     "eslint-plugin-nns": "^0.0.2",
-    "for-editor": "^0.3.4",
     "highlight.js": "^9.15.10",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.7.0",
@@ -40,8 +39,8 @@
     "qs": "^6.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-editor-markdown": "^1.0.6",
     "react-infinite-scroller": "^1.2.4",
+    "react-markdown-editor-lite": "^0.4.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
