--- a/package.json
+++ b/package.json
@@ -5,19 +5,21 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon",
-    "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "next build",
+    "start": "NODE_ENV=production pm2 start start.js --name xingzhou"
   },
   "author": "hjf",
   "license": "ISC",
   "dependencies": {
+    "@babel/register": "^7.7.0",
     "@zeit/next-bundle-analyzer": "^0.1.2",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.23.2",
     "axios": "^0.19.0",
     "babel-plugin-module-resolver": "^3.2.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
     "eslint-plugin-nns": "^0.0.2",
     "highlight.js": "^9.15.10",
