--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-infinite-scroller": "^1.2.4",
+    "react-markdown-editor": "^0.6.2",
     "react-markdown-editor-lite": "^0.4.3",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
