--- a/.eslintrc
+++ b/.eslintrc
@@ -25,7 +25,8 @@
     "import/prefer-default-export": "off",
     "comma-dangle": ["error", "never"],
     "no-underscore-dangle": "off",
-    "jsx-a11y/no-static-element-interactions": "off"
+    "jsx-a11y/no-static-element-interactions": "off",
+    "allowForLoopAfterthoughts": true
   },
   "plugins": ["import"]
 }
