--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "antd": "^3.23.2",
-    "axios": "^0.19.0",
+    "axios": "^0.21.1",
     "babel-plugin-module-resolver": "^3.2.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
@@ -50,6 +50,7 @@
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
+    "three": "^0.129.0",
     "zlib": "^1.0.5"
   },
   "devDependencies": {
